# llvm_mini_toolchain

./: .bazelrc  .gitignore  README.md  WORKSPACE.bazel
cc_toolchain/: BUILD.bazel  sysroot.bzl  toolchain_config.bzl
cc_toolchain/experimental/: sysroot_local.bzl
cc_toolchain/features/: BUILD.bazel  cc_toolchain_import.bzl  features.bzl
cc_toolchain/wrappers/: BUILD
cc_toolchain/wrappers/darwin/: BUILD  gcc  idle
cc_toolchain/wrappers/linux/: BUILD  idle
cc_toolchain/wrappers/mac/: BUILD
cc_toolchain/wrappers/macos/: gcc
cc_toolchain/wrappers/posix/: BUILD
cc_toolchain/wrappers/windows/: BUILD  ar.bat  idle.bat
config/: BUILD.bazel  http.bzl  llvm18_archive.bzl  llvm18_linux_x86_64.BUILD  llvm19_linux_x86_64.BUILD  llvm_linux_x86_64.BUILD  llvm_macos_aarch64.BUILD  sysroot_linux_aarch64.BUILD  sysroot_linux_aarch64_glibc2_27.BUILD  sysroot_linux_x86_64.BUILD  sysroot_linux_x86_64_glibc2_27.BUILD  sysroot_local_posix.BUILD  sysroot_macos_aarch64.BUILD  sysroot_macos_arm64.BUILD  sysroot_macosx_arm64.BUILD
features/: BUILD.bazel  cc_toolchain_import.bzl  feature_import.bzl  features.bzl
sysroots/macos_arm64/: README.md
tests/: BUILD.bazel  absl.cc  absl_test.cc  echo.cc  echo.h  echo_run.cc  echo_test.cc  echoclient.cc  echoclient_test.cc  hello.proto  hello_absl.cc  hello_protobuf.cc  hello_world.c  hello_world.cc  hello_world.proto  hello_world_proto.cc  protobuf.cc  protobuf_hello.proto  protobuf_test.cc  protoclient.cc  protoclient_tool.py  protoclient_tool_test.py  protogen.cc  protogen_tool.py  protogen_wrapper.py  pybind.cc  pybind_tool.py
tests/protobuf/: BUILD.bazel
tmp/tests/: BUILD.bazel  echo.cc
